<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="activity"
            type="com.shopemania.app.signup.SignUpActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="32dp"
        android:paddingTop="16dp"
        android:paddingEnd="32dp"
        tools:context=".signup.SignUpActivity">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/image"
            android:onClick="@{()->activity.back()}"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintHeight_percent="0.04"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_left" />

        <TextView
            android:id="@+id/textView"
            style="@style/TextAppearance.AppCompat.Display1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/signup"
            android:textAllCaps="true"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_back" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/shapeableImageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:shapeAppearanceOverlay="@style/circleImageView"
            app:srcCompat="@drawable/ic_profile_pic" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shapeableImageView">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:text="@={activity.user.name}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_phone_no"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/phone_no"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_email"
            app:prefixText="+91  ">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_phone_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:maxLength="10"
                android:text="@={activity.phoneNo}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:text="@{activity.user.emailId}" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_otp_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{(view)-> activity.sendOtp(activity.phoneNo)}"
            android:padding="16dp"
            android:text="@string/get_otp"
            android:textColor="@color/colorPrimary"
            android:visibility="@{(activity.phoneNo.length()==10 &amp;&amp; !activity.isShowProgressbar) ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="@+id/til_phone_no"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/til_phone_no" />

        <ProgressBar
            android:id="@+id/pb_get_otp"
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:visibility="@{activity.isShowProgressbar? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="@+id/til_phone_no"
            app:layout_constraintEnd_toEndOf="@+id/til_phone_no"
            app:layout_constraintTop_toTopOf="@+id/til_phone_no" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>